Expand QR support to version 10, add tests and CI
- Extend QR version support from 1–4 to 1–10 (up to 271 bytes)
- Add multi-block RS-ECC interleaving for v6+
- Add version info encoding (BCH 18,6) for v7+
- Add algorithmic alignment position calculation
- Add input validation (TypeError, RangeError)
- Export qrMatrix() for canvas-free usage
- Add 30 round-trip tests with vitest + jsqr
- Add GitHub Actions CI workflow
- Add esbuild build scripts, bump to v1.1.0
- Remove committed dist/ from git, add to .gitignore
- Update README with capacity table, ECC docs, qrMatrix usage

--- a/example.html
+++ b/example.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <h1>qr-canvas-js</h1>
-  <p>Minimal, zero-dependency QR code generator for canvas.</p>
+  <p>Minimal, zero-dependency QR code generator. Supports versions 1–10 (up to 271 bytes).</p>
 
   <label>Text or URL
     <input type="text" id="input" value="https://example.com">
